--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,32 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
 <head>
     <meta charset="UTF-8">
-    <title>BORGER LOGGER</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+        crossorigin="anonymous">
+    <!-- Custom CSS Styling -->
+    <link rel="stylesheet" href="/assets/css/burger_style.css">
+    <title>Burgers Nom Nom Nom!</title>
 </head>
 
 <body>
-    <div>
+    <!-- Page Container -->
+    <div class="container-fluid">
+        <center>
+            <div class="row">
+                <img src="/assets/img/bacon.jpg" alt="Burger Img">
+                <div class="jumbotron">
+                    <h1>Burgers Nom Nom Nom!</h1>
+                    <p id="info">Pick a burger from the list. Then devour it.
+                        <br> Don't see a burger you like? What's wrong with you bacon is amazing. Well, then enter a Burger of
+                        your choice to the list using the submit form below. The list on the left keeps track of what you
+                        ate.</p>
+        </center>
         <br>
+        <!-- Burger Content from index.handlebars -->
         {{{body}}}
         <br>
         <br>
+        <!-- Input New Burgers Form -->
         <form action="burger/create" method="POST">
-            <div>
-                <label for="new_burger" class="">INSERT YOUR BORGER HERE</label>
-                <textarea type="text" id="new_burger"
-                    name="burger_name"><textarea name="" id="" cols="30" rows="10"> </textarea>
-                <button id="submit-button" type="submit">MAKE THAT BURGER</button>
+            <!-- Text Area Input -->
+            <div class="row">
+                <!-- Empty Div to help center textarea -->
+                <div class="col-md-3"></div>
+                <!-- Burger Input Box -->
+                <div class="form-group col-md-6">
+                    <center>
+                        <label for="new_burger" class="submitFont">Create a new burger!</label>
+                    </center>
+                    <textarea class="form-control" type="text" columns="6" rows="2" id="new_burger required value=" name="burger_name"></textarea>
+                </div>
+                <div class="col-md-3 "></div>
+            </div>
+            <!-- Submit Button -->
+            <center>
+                <button id="submit-button " type="submit " class="btn">Cook my Burger!</button>
+            </center>
         </form>
-    </div>
-
-    </div>
+        <br>
+        </div>
+        <footer class="footer">
+      <div class="container">
+      </div>
+    </footer>
 </body>
-
-
-
-
 
 </html>
