--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -17,11 +17,9 @@
             </div>
         </div>
 
-        <div class="col-md-2"></div>
-
         <!-- devoured burgers -->
-        <div class="col-md-5">
-            <h3 class="submitFont">Already Eaten:</h3>
+        <div>
+            <h3 class="submitFont">C O N S U M E D:</h3>
             <div id="alreadyEaten">
                 {{#each burgers}} {{#if this.devoured}}
                 <div class="input-group">
