--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Custom CSS Styling -->
     <link rel="stylesheet" href="/assets/css/burger_style.css">
     <title>Burgers Nom Nom Nom!</title>
@@ -21,9 +21,12 @@
                 <div class="jumbotron">
                     <h1>Burgers Nom Nom Nom!</h1>
                     <p id="info">Pick a burger from the list. Then devour it.
-                        <br> Don't see a burger you like? What's wrong with you bacon is amazing. Well, then enter a Burger of
-                        your choice to the list using the submit form below. The list on the left keeps track of what you
-                        ate.</p>
+                        <br> Don't see a burger you like? What's wrong with you bacon is amazing. Well, then enter a
+                        Burger of
+                        your choice to the list using the submit form below. The list on the left keeps track of what
+                        you
+                        ate.
+                    </p>
         </center>
         <br>
         <!-- Burger Content from index.handlebars -->
@@ -41,7 +44,8 @@
                     <center>
                         <label for="new_burger" class="submitFont">Create a new burger!</label>
                     </center>
-                    <textarea class="form-control" type="text" columns="6" rows="2" id="new_burger required value=" name="burger_name"></textarea>
+                    <textarea class="form-control" type="text" columns="6" rows="2" id="new_burger required value="
+                        name="burger_name"></textarea>
                 </div>
                 <div class="col-md-3 "></div>
             </div>
@@ -51,10 +55,10 @@
             </center>
         </form>
         <br>
+    </div>
+    <footer class="footer">
+        <div class="container">
         </div>
-        <footer class="footer">
-      <div class="container">
-      </div>
     </footer>
 </body>
 
