--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Custom CSS Styling -->
-    <link rel="stylesheet" href="/assets/css/burger_style.css">
-    <title>Burgers Nom Nom Nom!</title>
+    <link rel="stylesheet" href="css/burger_style.css">
+    <title>Burgers Logmaster</title>
 </head>
 
 <body>
@@ -19,13 +19,11 @@
         <center>
             <div class="row">
                 <div class="jumbotron">
-                    <h1>Burgers Nom Nom Nom!</h1>
-                    <p id="info">Pick a burger from the list. Then devour it.
-                        <br> Don't see a burger you like? What's wrong with you bacon is amazing. Well, then enter a
-                        Burger of
-                        your choice to the list using the submit form below. The list on the left keeps track of what
-                        you
-                        ate.
+                    <h1>Burger-o-matic!!!!</h1>
+                    <p id="info">Pick a burger from the list. Then proceed to C O N S U M E it.
+                        <br> Don't see a burger you like? Consider looking in the mirror, and commence questioning your life choices up until this point.
+                    <br> Otherwise, simply type in a new burger, click enter, and then consume that instead.
+                    
                     </p>
         </center>
         <br>
@@ -34,7 +32,7 @@
         <br>
         <br>
         <!-- Input New Burgers Form -->
-        <form action="burger/create" method="POST">
+        <form action="borger/create" method="POST">
             <!-- Text Area Input -->
             <div class="row">
                 <!-- Empty Div to help center textarea -->
