--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -49,7 +49,7 @@
             </div>
             <!-- Submit Button -->
             <center>
-                <button id="submit-button " type="submit " class="btn">Cook my Burger!</button>
+                <button id="submit-button " type="submit " class="btn">Generate my burger</button>
             </center>
         </form>
         <br>
