--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -17,7 +17,7 @@
             </div>
         </div>
 
-        <!-- devoured burgers -->
+        <!-- devoured BORGERS -->
         <div>
             <h3 class="submitFont">C O N S U M E D:</h3>
             <div id="alreadyEaten">
