--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,13 +1,13 @@
 <div class="row">
     <center>
         <!-- Left side (Burgers Available) -->
-        <div class="col-md-5">
-            <h3 class="submitFont">BORGERS</h3>
+        <div class="col-md-6">
+            <h3 class="submitFont">BURGERS</h3>
             <div id="burgersAvailable">
                 {{#each borger}} {{#unless devoured}}
-                <form action="borger/eat/{{id}}" method="POST">
+                <form action="change-devoured" method="POST">
                     <div class="input-group">
-                        <li class="form-control">{{burger_name}}</li>
+                        <li class="form-control">{{borger_name}}</li>
                         <span class="input-group-btn">
                             <button class="btn btn-danger devour-button" type="submit">CONSUME</button>
                         </span>
@@ -17,13 +17,14 @@
             </div>
         </div>
 
-        <!-- devoured BORGERS -->
-        <div>
+        <!-- CONSUMED BORGERS -->
+
+        <div class="col-md-6">
             <h3 class="submitFont">C O N S U M E D:</h3>
             <div id="alreadyEaten">
                 {{#each borger}} {{#if this.devoured}}
                 <div class="input-group">
-                    <li class="form-control">{{this.burger_name}}</li>
+                    <li class="form-control">{{this.borger_name}}</li>
                 </div>
                 {{/if}} {{/each}}
             </div>
