--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -19,16 +19,13 @@
         <div class="col-md-6">
             <h3 class="submitFont">BURGERS</h3>
             <div id="burgersAvailable">
-                {{#each borger}} {{#unless devoured}}
-                <form action="change-devoured" method="POST">
-                    <div class="input-group">
-                        <li class="form-control">{{borger_name}}</li>
-                        <span class="input-group-btn">
-                            <button class="btn btn-danger devour-button" type="submit">CONSUME</button>
-                        </span>
-                    </div>
-                </form>
-                {{/unless}} {{/each}}
+                <ul>
+                    {{#each burgers}}
+                    {{#unless devoured}}
+                    {{> burgers/burger-block devoured=true}}
+                    {{/unless}}
+                    {{/each}}
+                </ul>
             </div>
                     <!-- Input New Burgers Form -->
             <form class="create-form" name="myForm" onsubmit="return validateForm()" method="POST">
@@ -47,11 +44,13 @@
         <div class="col-md-6">
             <h3 class="submitFont">C O N S U M E D:</h3>
             <div id="alreadyEaten">
-                {{#each borger}} {{#if this.devoured}}
-                <div class="input-group">
-                    <li class="form-control">{{this.borger_name}}</li>
-                </div>
-                {{/if}} {{/each}}
+                <ul>
+                    {{#each burgers}}
+                    {{#if devoured}}
+                    {{> burgers/burger-block devoured=false}}
+                    {{/if}}
+                    {{/each}}
+                </ul>
             </div>
         </div>
     </center>
