--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -2,7 +2,7 @@
 	{{name}}
 
 	<button class="change-devoured primary-btn m-1" data-id="{{id}}" data-newdevoured="{{devoured}}">
-		{{#if devoured}}NOM!{{else}}REORDER{{/if}}
+		{{#if devoured}}Eat!{{else}}REORDER{{/if}}
 	</button>
 
 	<button class="delete-burger" data-id="{{this.id}}"><i class="fas fa-times"></i></button>
