--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,15 +21,9 @@
         <br>
         <br>
     </div>
-    <footer class="footer">
-        <div class="container">
-        </div>
-    </footer>
-
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery.js"></script>
     <!-- Javacript -->
-    <script src="/assets/js/burger.js"></script>yy
+    <script src="/assets/js/burger.js"></script>
 </body>
-
 </html>
