--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -19,7 +19,7 @@
         <div class="col-md-6">
             <h3 class="submitFont">BURGERS</h3>
             <div id="burgersAvailable">
-                <ul>
+                <ul id="burgies">
                     {{#each burgers}}
                     {{#unless devoured}}
                     {{> burgers/burger-block devoured=true}}
@@ -44,7 +44,7 @@
         <div class="col-md-6">
             <h3 class="submitFont">C O N S U M E D:</h3>
             <div id="alreadyEaten">
-                <ul>
+                <ul id="burgies">
                     {{#each burgers}}
                     {{#if devoured}}
                     {{> burgers/burger-block devoured=false}}
