--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -5,5 +5,5 @@
 		{{#if devoured}}Eat!{{else}}REORDER{{/if}}
 	</button>
 
-	<button class="delete-burger" data-id="{{this.id}}"><i class="fas fa-times"></i></button>
+	<button class="delete-burger" data-id="{{this.id}}">X<i class="fas fa-times"></i></button>
 </li>
